2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalmount.c:
	Fix deadlock when looking for cdrom icons.

2008-03-04  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (run_list_command):
	don't require \r as line ending for LIST commands. Fixes ftp.netbsd.org
	* hal/ghalvolumemonitor.c: (adopt_orphan_mount):
	unused variable

2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonmount.c:
        * client/gdaemonvolumemonitor.c:
        * hal/ghaldrive.c:
        * hal/ghalmount.c:
        * hal/ghalvolume.c:
        * hal/ghalvolumemonitor.[ch]:
	Properly lock around volume monitors and
	volume monitor objects.
	Emit all events in idles to avoid reentrancy
	issues. Fixed deadlock in #519599.

2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * common/gmountsource.c:
        * common/gmounttracker.c:
	Work around problems with type registering when the common code
	is used in both daemon and client.

2008-03-04  Benjamin Otte  <otte@gnome.org>

	* common/gmountsource.c: (ask_password_reply),
	(g_mount_source_ask_password_finish),
	(g_mount_source_ask_password), (op_ask_password_reply):
	* common/gmountsource.h:
	add an anonymous_out parameter for anonymous logins.
	* daemon/gvfsbackenddav.c: (soup_authenticate_interactive):
	* daemon/gvfsbackendsftp.c: (handle_login):
	* daemon/gvfsbackendsmb.c: (auth_callback):
	make the backends compile with the new parameter. They don't use
	anonymous logins.
	* daemon/gvfsbackendftp.c: (do_mount):
	make login work as users would expect it with anonymous logins. 
	Fixes bug #520131

2008-03-04  Carlos Garcia Campos  <carlosgc@gnome.org>

	* common/gmountspec.c: (g_mount_spec_copy):
	* daemon/gvfsdaemon.c: (g_vfs_daemon_initiate_mount):
	* daemon/main.c: (main):
	Fix memory leaks.
	
2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.c:
	Avoid duplications in supported_uris.
	
        * daemon/smb-browse.mount.in:
        * daemon/smb.mount.in: